various versions of octave-forge. For a full list of changes please
see the <a href="ChangeLog">ChangeLog</a>.</p>
</div>
<div class="section">
<dl>
<<dt>May 7, 2008</dt>
<dd>
<p>The optim package has been updated to version 1.0.3, and a new version of the bundle has been released to reflect this change. This change was needed due to an error by the release manager.</p>
</dd>
dt>April 29, 2008</dt>
<dd>
<p>Release of Octave-forge tested against Octave 3.0.1. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>ann: New package for Octave bindings to the ANN library for
   nearest neighbor calculation.</li>
   <li>database: New package to allow postgres, mysql, sqlite, and
   standard ODBC database commands from within Octave.</li>
   <li>video: New package with bindings to ffmpeg to add handling of
   video files from within Octave.</li>
   <li>bioinfo: New package for Bioinformatics manipulation.</li> 
   <li>data-smoothing: New package with algorithms for smoothing noisy
   data.</li>
   <li>ga: New package with basic genetic algorithm optimization
   functions.</li> 
   <li>missing-functions: New package to identify functions that are
   missing from Octave relative to the latest verson of Matlab.</li>
   <li>ftp: New package to ftp from within Octave</li>
   <li>ocs: A new package for circuit simulation.</li>
   <li>fixed: Build fix for Unix, cygwin and mingw platforms.</li>
   <li>plot: Remove old plot code based on Xlib and replace with
   gtext, ginput and waitforbuttonpress functions that use gnuplot
   directly to obtan the required information. Add colstyle function.</li>
   <li>signal: Add the window and buffer functions. Fix tukeywin for
   odd lengths.</li>
   <li>mapping: Add the km2deg and reckon functions.</li>
   <li>image: Add the imcomplement and rgbplot functions. Support for
   bilateral filtering. Build fixes for new versions of ImageMagick.</li>