@@ -276,6 +276,18 @@ Linear-Algebra</a></b></td>
   <p id="linear-algebra_detailed" style="display: none;">
 Additional linear algebra code, including general SVD and matrix functions.  </p>
 </div>
+<div class="package" id="miscellaneous">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('miscellaneous');" class="package_head_link">   <img src="show.png" id="miscellaneous_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Miscellaneous</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./miscellaneous/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/miscellaneous-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="miscellaneous_detailed" style="display: none;">
+Miscellaneous tools including waitbar, xml tools, etc  </p>
+</div>
 <div class="package" id="missing-functions">
   <table class="package"><tr>
     <td>
@@ -448,6 +460,18 @@ sockets</a></b></td>
   <p id="sockets_detailed" style="display: none;">
 Socket functions  </p>
 </div>
+<div class="package" id="specfun">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('specfun');" class="package_head_link">   <img src="show.png" id="specfun_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Specfun</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./specfun/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/specfun-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="specfun_detailed" style="display: none;">
+Special functions including ellipitic functions, etc  </p>
+</div>
 <div class="package" id="special-matrix">
   <table class="package"><tr>
     <td>
@@ -496,3 +520,386 @@ strings</a></b></td>
   <p id="strings_detailed" style="display: none;">
 Additional manipulation functions  </p>
 </div>
+<div class="package" id="struct">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('struct');" class="package_head_link">   <img src="show.png" id="struct_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Struct</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./struct/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/struct-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="struct_detailed" style="display: none;">
+Additional Structure manipulations functions.  </p>
+</div>
+<div class="package" id="symbolic">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('symbolic');" class="package_head_link">   <img src="show.png" id="symbolic_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Symbolic</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./symbolic/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/symbolic-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="symbolic_detailed" style="display: none;">
+Symbolic toolbox based on GiNaC and CLN.  </p>
+</div>
+<div class="package" id="time">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('time');" class="package_head_link">   <img src="show.png" id="time_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+time</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./time/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/time-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="time_detailed" style="display: none;">
+Additional date manipulation tools.  </p>
+</div>
+<div class="package" id="video">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('video');" class="package_head_link">   <img src="show.png" id="video_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+video</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./video/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/video-1.0.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="video_detailed" style="display: none;">
+Implements addframe, avifile, aviinfo, and aviread, using ffmpeg. (and approximately conforms to Matlab interface)  </p>
+</div>
+<div class="package" id="vrml">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('vrml');" class="package_head_link">   <img src="show.png" id="vrml_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Vrml</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./vrml/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/vrml-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="vrml_detailed" style="display: none;">
+3D graphics using VRML  </p>
+</div>
+<div class="package" id="zenity">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('zenity');" class="package_head_link">   <img src="show.png" id="zenity_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Zenity</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./zenity/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/zenity-0.5.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="zenity_detailed" style="display: none;">
+A set of functions for creating simple graphical user interfaces. It is currently possible to create
+ calendar windows, text entries, file selection dialogs,
+ lists, message windows, icons in the notification area,
+ and windows for large amount of text.
+  </p>
+</div>
+<h2 id="extra">Extra packages</h2>
+<div class="package" id="ad">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('ad');" class="package_head_link">   <img src="show.png" id="ad_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+AD</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./ad/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/ad-1.0.2.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="ad_detailed" style="display: none;">
+Automatic Forward Differentiation  </p>
+</div>
+<div class="package" id="bim">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('bim');" class="package_head_link">   <img src="show.png" id="bim_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+BIM</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./bim/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/bim-0.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="bim_detailed" style="display: none;">
+Package for solving Diffusion Advection Reaction (DAR) Partial Differential Equaltions based on the Finite Volume Scharfetter-Gummel (FVSG) method a.k.a Box Integration Method (BIM)  </p>
+</div>
+<div class="package" id="civil-engineering">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('civil-engineering');" class="package_head_link">   <img src="show.png" id="civil-engineering_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Civil-Engineering</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./civil/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/civil-engineering-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="civil-engineering_detailed" style="display: none;">
+Functions to solution some ODE's in Civil Engineering.  </p>
+</div>
+<div class="package" id="engine">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('engine');" class="package_head_link">   <img src="show.png" id="engine_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Engine</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./engine/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/engine-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="engine_detailed" style="display: none;">
+An external interface library for Octave  </p>
+</div>
+<div class="package" id="fpl">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('fpl');" class="package_head_link">   <img src="show.png" id="fpl_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+FPL</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./fpl/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/fpl-0.1.2.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="fpl_detailed" style="display: none;">
+Collection of routines to plot data on unstructured triangular and tetrahedral meshes  </p>
+</div>
+<div class="package" id="graceplot">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('graceplot');" class="package_head_link">   <img src="show.png" id="graceplot_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Graceplot</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./graceplot/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/graceplot-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="graceplot_detailed" style="display: none;">
+Graceplot bindings for octave.  </p>
+</div>
+<div class="package" id="integration">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('integration');" class="package_head_link">   <img src="show.png" id="integration_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Integration</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./integration/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/integration-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="integration_detailed" style="display: none;">
+Toolbox for 1-D, 2-D, and n-D Numerical Integration  </p>
+</div>
+<div class="package" id="java">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('java');" class="package_head_link">   <img src="show.png" id="java_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Java</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./java/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/java-1.2.4.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="java_detailed" style="display: none;">
+Provides Java interface with OO-like Java objects manipulation  </p>
+</div>
+<div class="package" id="jhandles">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('jhandles');" class="package_head_link">   <img src="show.png" id="jhandles_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+JHandles</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./jhandles/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/jhandles-0.3.3.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="jhandles_detailed" style="display: none;">
+JHandles is a java- and openGL-based alternative graphics package for octave, providing a handle-based mechanism similar to Matlab.
+  </p>
+</div>
+<div class="package" id="mapping">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('mapping');" class="package_head_link">   <img src="show.png" id="mapping_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Mapping</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./mapping/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/mapping-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="mapping_detailed" style="display: none;">
+Simple Mapping functions.  </p>
+</div>
+<div class="package" id="msh">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('msh');" class="package_head_link">   <img src="show.png" id="msh_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+MSH</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./msh/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/msh-0.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="msh_detailed" style="display: none;">
+Package for creating and managing triangular and tetrahedral meshes for Finite Element or Finite Volume PDE solvers. Uses a mesh data structure compatible with pdetool. Relies on gmsh for unstructured mesh generation.  </p>
+</div>
+<div class="package" id="multicore">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('multicore');" class="package_head_link">   <img src="show.png" id="multicore_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Multicore</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./multicore/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/multicore-0.2.12.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="multicore_detailed" style="display: none;">
+An Octave-forge package providing functions for parallel processing on multiple cores.
+  </p>
+</div>
+<div class="package" id="nan">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('nan');" class="package_head_link">   <img src="show.png" id="nan_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+NaN</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./NaN/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/nan-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="nan_detailed" style="display: none;">
+Missing value statistical toolbox  </p>
+</div>
+<div class="package" id="pdb">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('pdb');" class="package_head_link">   <img src="show.png" id="pdb_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+PDB</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./pdb/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/pdb-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="pdb_detailed" style="display: none;">
+Reads and display PDB-files from the Brookhaven protein databank  </p>
+</div>
+<div class="package" id="secs1d">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('secs1d');" class="package_head_link">   <img src="show.png" id="secs1d_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+SECS1D</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./secs1d/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/secs1d-0.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="secs1d_detailed" style="display: none;">
+A Drift-Diffusion simulator for 1d semiconductor devices  </p>
+</div>
+<div class="package" id="secs2d">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('secs2d');" class="package_head_link">   <img src="show.png" id="secs2d_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+SECS2D</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./secs2d/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/secs2d-0.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="secs2d_detailed" style="display: none;">
+A Drift-Diffusion simulator for 2d semiconductor devices  </p>
+</div>
+<div class="package" id="tcl-octave">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('tcl-octave');" class="package_head_link">   <img src="show.png" id="tcl-octave_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Tcl-Octave</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./soctcl/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/tcl-octave-0.1.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="tcl-octave_detailed" style="display: none;">
+socket implementation of a tcl-octave connection  </p>
+</div>
+<div class="package" id="symband">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('symband');" class="package_head_link">   <img src="show.png" id="symband_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+SymBand</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./symband/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/symband-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="symband_detailed" style="display: none;">
+Linear Algebra for Symmetric Banded Matrices.  </p>
+</div>
+<div class="package" id="triangular">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('triangular');" class="package_head_link">   <img src="show.png" id="triangular_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Triangular</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./triangular/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/triangular-1.0.4.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="triangular_detailed" style="display: none;">
+Simple example of a user type implementing a simple matrix type for triangular matrices.  </p>
+</div>
+<div class="package" id="tsa">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('tsa');" class="package_head_link">   <img src="show.png" id="tsa_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+TSA</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./tsa/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/tsa-3.10.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="tsa_detailed" style="display: none;">
+Stochastic concepts and maximum entropy methods for time series analysis  </p>
+</div>
+<div class="package" id="windows">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('windows');" class="package_head_link">   <img src="show.png" id="windows_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Windows</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./Windows/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/windows-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="windows_detailed" style="display: none;">
+Provides COM interface and additional functionality on Windows  </p>
+</div>
+<div class="package" id="xraylib">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('xraylib');" class="package_head_link">   <img src="show.png" id="xraylib_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Xraylib</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./xraylib/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/xraylib-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="xraylib_detailed" style="display: none;">
+Bindings to the Xraylib functions  </p>
+</div>
+<h2 id="language">Native Translations</h2>
+<div class="package" id="pt_br">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('pt_br');" class="package_head_link">   <img src="show.png" id="pt_br_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+pt_BR</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./pt_BR/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/pt_br-1.0.6.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="pt_br_detailed" style="display: none;">
+Brazilian Portuguese translations of the help strings of the Octave functions. 
+  </p>
+</div>
+<h2 id="nonfree">Non-free packages</h2>
+<div class="package" id="arpack">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('arpack');" class="package_head_link">   <img src="show.png" id="arpack_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+Arpack</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./arpack/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/arpack-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="arpack_detailed" style="display: none;">
+Octave bindings to ARPACK, including the eigs and svds function.  </p>
+</div>
+<div class="package" id="spline-gcvspl">
+  <table class="package"><tr>
+    <td>
+   <b><a href="javascript:unfold('spline-gcvspl');" class="package_head_link">   <img src="show.png" id="spline-gcvspl_im"alt="show/hide" style="padding-right: 0.5em; border: none;"/>
+spline-gcvspl</a></b></td>
+    <td style="text-align: right;">&raquo; <a href="./spline-gsvspl/index.html" class="package_link">details</a> |
+    <a class="package_link" href="__PACKAGE__/spline-gcvspl-1.0.5.tar.gz?download">download</a>
+    </td>
+  </tr></table>
+  <p id="spline-gcvspl_detailed" style="display: none;">
+B-spline data smoothing using generalized cross-validation and mean squared prediction or explicit user smoothing  </p>
+</div>
+__TRAILER__
