@@ -11,7 +11,10 @@ see the <a href="ChangeLog">ChangeLog</a>.</p>
 <dd>
 <p>The optim package has been updated to version 1.0.3, and a new version of the bundle has been released to reflect this change. This change was needed due to an error by the release manager.</p>
 </dd>
-dt>April 29, 2008</dt>
+<dt>May 5, 2008</dt>
+<dd>Updated Windows installer to Octave 3.0.1.
+</dd>
+<dt>April 29, 2008</dt>
 <dd>
 <p>Release of Octave-forge tested against Octave 3.0.1. Many packages
  will also function function with earlier versions of Octave 2.9.
@@ -35,7 +38,7 @@ dt>April 29, 2008</dt>
    <li>fixed: Build fix for Unix, cygwin and mingw platforms.</li>
    <li>plot: Remove old plot code based on Xlib and replace with
    gtext, ginput and waitforbuttonpress functions that use gnuplot
-   directly to obtan the required information. Add colstyle function.</li>
+   directly to obtain the required information. Add colstyle function.</li>
    <li>signal: Add the window and buffer functions. Fix tukeywin for
    odd lengths.</li>
    <li>mapping: Add the km2deg and reckon functions.</li>
